Partial_14Dec2021/force-app/main/default/objects/Business_Activity_History__c/Business_Activity_History__c.object-meta.xml
<CustomObject>
    <label>Business Activity/History</label>
    <nameField>
        <label>Brand Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Activity/History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>