Partial_14Dec2021/force-app/main/default/objects/Business_Activity_History__c/fields/Average_Annual_Turn_Over__c.field-meta.xml
<CustomField>
    <fullName>Average_Annual_Turn_Over__c</fullName>
    <label>Average Annual Turnover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>