Partial_14Dec2021/force-app/main/default/objects/Business_Activity_History__c/fields/Dealing_Since_When__c.field-meta.xml
<CustomField>
    <fullName>Dealing_Since_When__c</fullName>
    <label>Dealing Since When</label>
    <type>Date</type>
</CustomField>