Partial_14Dec2021/force-app/main/default/objects/Business_Activity_History__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Business Activity/History</relationshipLabel>
    <relationshipName>Business_Activity_History</relationshipName>
    <type>Lookup</type>
</CustomField>