Partial_14Dec2021/force-app/main/default/objects/Business_Activity_History__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <length>50</length>
    <type>Text</type>
</CustomField>