Partial_14Dec2021/force-app/main/default/objects/Business_Activity_History__c/fields/Projected_Sales_In_Lacs__c.field-meta.xml
<CustomField>
    <fullName>Projected_Sales_In_Lacs__c</fullName>
    <label>Projected Sales(In Lacs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>