Partial_14Dec2021/force-app/main/default/objects/Business_Activity_History__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DISTRIBUTION</fullName>
            </value>
            <value>
                <fullName>RETAIL</fullName>
            </value>
            <value>
                <fullName>MANUFACTURING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>